# sway-analyzer

./: Cargo.toml  MILESTONES.md  README.md
src/: error.rs  main.rs  project.rs  report.rs  scope.rs  utils.rs  visitor.rs
src/detectors/: arbitrary_asset_transfer.rs  arbitrary_code_execution.rs  boolean_comparison.rs  boolean_comparisons.rs  boolean_literal_comparisons.rs  discarded_assignment.rs  discarded_assignments.rs  division_before_multiplication.rs  explicit_return_statement.rs  explicit_return_statements.rs  external_call_in_loop.rs  external_calls_in_loop.rs  inline_assembly_usage.rs  input_identity_validation.rs  large_literal.rs  large_literals.rs  locked_native_asset.rs  magic_number.rs  magic_numbers.rs  manipulatable_balance_usage.rs  missing_logs.rs  mod.rs  msg_amount_in_loop.rs  non_zero_identity_validation.rs  potential_infinite_loop.rs  potential_infinite_loops.rs  redundant_comparison.rs  redundant_storage_access.rs  storage_field_mutability.rs  storage_not_updated.rs  storage_read_in_loop_condition.rs  strict_equality.rs  unchecked_call_payload.rs  unprotected_initialization.rs  unprotected_storage_variable.rs  unprotected_storage_variables.rs  unsafe_timestamp_usage.rs  unused_import.rs  unused_imports.rs  weak_prng.rs
src/visitors/: discarded_assignments.rs  inline_assembly_usage.rs  missing_logs.rs  mod.rs  msg_amount_in_loop.rs  storage.rs  storage_not_updated.rs  visitor.rs  write_after_write.rs
test/arbitrary_asset_transfer/: Forc.toml
test/arbitrary_code_execution/: Forc.toml
test/boolean_comparison/: Forc.toml
test/boolean_comparisons/: Forc.toml
test/boolean_literal_comparisons/: Forc.toml
test/discarded_assignment/: Forc.toml
test/discarded_assignments/: Forc.toml
test/division_before_multiplication/: Forc.toml
test/explicit_return_statement/: Forc.toml
test/explicit_return_statements/: Forc.toml
test/external_call_in_loop/: Forc.toml
(+69 files in other folders)
