[package]
name = "sway-analyzer"
version = "0.1.7"
edition = "2021"
license-file = "LICENSE"
description = "A security-focused static analyzer for Sway written in Rust."
repository = "https://github.com/camden-smallwood/sway-analyzer"
readme = "README.md"

[dependencies]
colored = "2.1.0"
serde = "1.0.201"
serde_json = "1.0.117"
structopt = { version = "0.3.26", default-features = false }
sway-ast = "0.56.1"
sway-error = "0.56.1"
sway-parse = "0.56.1"
sway-types = "0.56.1"
sway-ast-stubs = { git = "https://github.com/ourovoros-io/sway-ast-stubs.git", rev = "f8f202b" }
