[package]
name = "sway-analyzer"
version = "0.1.7"
edition = "2021"
license-file = "LICENSE"
description = "A security-focused static analyzer for Sway written in Rust."
repository = "https://github.com/ourovoros-io/sway-analyzer"
readme = "README.md"

[dependencies]
colored = "2.1.0"
serde = "1.0.201"
serde_json = "1.0.117"
structopt = { version = "0.3.26", default-features = false }
sway-ast = "0.68.2"
sway-error = "0.68.2"
sway-parse = "0.68.2"
sway-types = "0.68.2"
sway-ast-stubs = { git = "https://github.com/ourovoros-io/sway-ast-stubs.git", rev = "a714196e82b02e4aa328a2cae6dc573a0ea3a25e" }
